--- a/index.html
+++ b/index.html
@@ -3,7 +3,78 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TIKTOK VIRAL - Shorts Trending</title>
+
+    <!-- SEO Meta Tags -->
+    <title>TIKTOK VIRAL - Les Meilleurs Shorts TikTok et Vidéos Virales</title>
+    <meta
+      name="description"
+      content="Découvrez les meilleurs TikToks viraux du moment. Shorts vidéos tendance, compilations TikTok, contenus viraux et divertissants mis à jour quotidiennement."
+    />
+    <meta
+      name="keywords"
+      content="tiktok, viral, shorts, vidéos virales, tendances tiktok, meilleurs tiktok, tiktok france, shorts youtube, compilation tiktok, tiktok 2024"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://votre-url.com/" />
+    <meta
+      property="og:title"
+      content="TIKTOK VIRAL - Les Meilleurs Shorts TikTok et Vidéos Virales"
+    />
+    <meta
+      property="og:description"
+      content="Découvrez les meilleurs TikToks viraux du moment. Shorts vidéos tendance et divertissants mis à jour quotidiennement."
+    />
+    <meta property="og:image" content="URL-de-votre-image-preview" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://votre-url.com/" />
+    <meta
+      property="twitter:title"
+      content="TIKTOK VIRAL - Les Meilleurs Shorts TikTok"
+    />
+    <meta
+      property="twitter:description"
+      content="Les meilleurs TikToks viraux et shorts tendance en un seul endroit."
+    />
+    <meta property="twitter:image" content="URL-de-votre-image-preview" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://votre-url.com/" />
+
+    <!-- Additional Meta Tags -->
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="French" />
+    <meta name="author" content="TIKTOK VIRAL" />
+    <meta name="theme-color" content="#FF0000" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "TIKTOK VIRAL",
+        "description": "Plateforme de curation des meilleurs TikToks et vidéos virales",
+        "url": "https://votre-url.com",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://votre-url.com/search?q={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+    </script>
+
+    <!-- Performance Optimization -->
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
+    <link rel="dns-prefetch" href="https://www.googleapis.com" />
+
+    <!-- Existing CSS and JS -->
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.2/axios.min.js"></script>
   </head>
