--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   </head>
   <body>
     <header class="header">
-      <h1>TIKTOK VIRAL</h1>
+      <h1>TIKTOK VIRALs</h1>
       <svg
         class="youtube-icon"
         viewBox="0 0 24 24"
