updated: offline videos

--- a/index.html
+++ b/index.html
@@ -137,12 +137,22 @@
       // Définition des vidéos par défaut
       const DEFAULT_SHORTS = [
         {
-          id: { videoId: "UJAH65fxDR0" },
+          id: { videoId: "hU61g3khIl4" },
           snippet: {
-            title: "🌟 Best TikTok",
+            title: "🔥 Best TikTok",
             publishedAt: new Date().toISOString(),
             thumbnails: {
-              high: { url: `https://i.ytimg.com/vi/UJAH65fxDR0/hqdefault.jpg` },
+              high: { url: `https://i.ytimg.com/vi/hU61g3khIl4/hqdefault.jpg` },
+            },
+          },
+        },
+        {
+          id: { videoId: "znOLAIG3yoM" },
+          snippet: {
+            title: "💫 Best TikTok",
+            publishedAt: new Date().toISOString(),
+            thumbnails: {
+              high: { url: `https://i.ytimg.com/vi/znOLAIG3yoM/hqdefault.jpg` },
             },
           },
         },
@@ -167,22 +177,32 @@
           },
         },
         {
+          id: { videoId: "CEpQpqdyhyQ" },
+          snippet: {
+            title: "🌟 Best TikTok",
+            publishedAt: new Date().toISOString(),
+            thumbnails: {
+              high: { url: `https://i.ytimg.com/vi/CEpQpqdyhyQ/hqdefault.jpg` },
+            },
+          },
+        },
+        {
+          id: { videoId: "UJAH65fxDR0" },
+          snippet: {
+            title: "🌟 Best TikTok",
+            publishedAt: new Date().toISOString(),
+            thumbnails: {
+              high: { url: `https://i.ytimg.com/vi/UJAH65fxDR0/hqdefault.jpg` },
+            },
+          },
+        },
+        {
           id: { videoId: "u3KpAL_lrDU" },
           snippet: {
             title: "🔥 Top TikTok",
             publishedAt: new Date().toISOString(),
             thumbnails: {
               high: { url: `https://i.ytimg.com/vi/u3KpAL_lrDU/hqdefault.jpg` },
-            },
-          },
-        },
-        {
-          id: { videoId: "znOLAIG3yoM" },
-          snippet: {
-            title: "💫 Best TikTok",
-            publishedAt: new Date().toISOString(),
-            thumbnails: {
-              high: { url: `https://i.ytimg.com/vi/znOLAIG3yoM/hqdefault.jpg` },
             },
           },
         },
