--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://votre-url.com/" />
+    <meta property="og:url" content="https://tiktok-viral.ddns.net/" />
     <meta
       property="og:title"
       content="TIKTOK VIRAL - Les Meilleurs Shorts TikTok et Vidéos Virales"
@@ -26,11 +26,11 @@
       property="og:description"
       content="Découvrez les meilleurs TikToks viraux du moment. Shorts vidéos tendance et divertissants mis à jour quotidiennement."
     />
-    <meta property="og:image" content="URL-de-votre-image-preview" />
+    <meta property="og:image" content="./preview.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://votre-url.com/" />
+    <meta property="twitter:url" content="https://tiktok-viral.ddns.net/" />
     <meta
       property="twitter:title"
       content="TIKTOK VIRAL - Les Meilleurs Shorts TikTok"
@@ -39,14 +39,14 @@
       property="twitter:description"
       content="Les meilleurs TikToks viraux et shorts tendance en un seul endroit."
     />
-    <meta property="twitter:image" content="URL-de-votre-image-preview" />
+    <meta property="twitter:image" content="./preview.png" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://votre-url.com/" />
+    <link rel="canonical" href="https://tiktok-viral.ddns.net/" />
 
     <!-- Additional Meta Tags -->
     <meta name="robots" content="index, follow" />
@@ -61,12 +61,7 @@
         "@type": "WebSite",
         "name": "TIKTOK VIRAL",
         "description": "Plateforme de curation des meilleurs TikToks et vidéos virales",
-        "url": "https://votre-url.com",
-        "potentialAction": {
-          "@type": "SearchAction",
-          "target": "https://votre-url.com/search?q={search_term_string}",
-          "query-input": "required name=search_term_string"
-        }
+        "url": "https://tiktok-viral.ddns.net/"
       }
     </script>
 
